# picto_rust_client

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: helpers.rs  lib.rs  network.rs  state.rs
client/src/communication/: mod.rs  net.rs  tui.rs
client/src/network/: pack_in.rs  pack_out.rs  topology.rs  utils.rs
client_lib/: Cargo.toml
client_lib/src/: communication.rs  lib.rs
client_tui/: Cargo.toml
client_tui/src/: communication.rs  event_handling.rs  helpers.rs  lib.rs  main.rs  state.rs
client_tui/src/ui/: chat_scroll_view.rs  draw_alert.rs  draw_chat_select.rs  draw_chat_view.rs  draw_help_box.rs  draw_name_set.rs  draw_room_select.rs  draw_text_edit.rs  mod.rs  ui_utils.rs
main_app/: Cargo.toml
main_app/src/: main.rs
tui_common/: Cargo.toml
tui_common/src/: sys.rs
